[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", default-features = true, features = [
    "blocking",
] }
dotenv = "0.15.0"
eyre = "0.6.12"
rayon = "1.10.0"
regex = "1.11.1"
structopt = "0.3.26"
lazy_static = "1.5.0"
ahash = "0.8.11"

# [profile.release]
# debug = 1
